CrOS Shelf: Dismiss hover previews on mouse out

You can see this "in action" here:

    https://bugs.chromium.org/p/chromium/issues/detail?id=874144#c17

Bug: 874144
Change-Id: I66dee12cd1d1c10e7b199db6d2d5b2cb72ba15ee
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1552759
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#648527}