ash/shelf/shelf_tooltip_preview_bubble.h
@@ -14,6 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/shelf/shelf_tooltip_manager.h"
 #include "ash/shelf/window_preview.h"
 #include "ash/wm/window_mirror_view.h"
+#include "base/timer/timer.h"
 #include "ui/aura/window.h"
 #include "ui/views/controls/label.h"
 
@@ -36,6 +37,7 @@ class ASH_EXPORT ShelfTooltipPreviewBubble : public ShelfBubble,
 
   // BubbleDialogDelegateView overrides:
   gfx::Rect GetBubbleBounds() override;
+  void OnMouseExited(const ui::MouseEvent& event) override;
 
   // ShelfBubble:
   bool ShouldCloseOnPressDown() override;
@@ -46,10 +48,13 @@ class ASH_EXPORT ShelfTooltipPreviewBubble : public ShelfBubble,
   void OnPreviewDismissed(WindowPreview* preview) override;
   void OnPreviewActivated(WindowPreview* preview) override;
 
+  void DismissAfterDelay();
+  void Dismiss();
+
   std::vector<WindowPreview*> previews_;
 
-  // Preferred size for the tooltip.
   ShelfTooltipManager* manager_;
+  base::OneShotTimer dismiss_timer_;
 
   const ShelfAlignment shelf_alignment_;
 
